--- a/src/CssFolder/Controls.css
+++ b/src/CssFolder/Controls.css
@@ -9,14 +9,14 @@ body, html, section, main, div, aside {
 }
 
 body{
-  background-image: url('http://edfuel.org/wp-content/uploads/2015/09/blueprint2.jpg');
+  /*background-image: url('http://edfuel.org/wp-content/uploads/2015/09/blueprint2.jpg');
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   display: flex;
   margin: auto;
-  height: 90vh;
-  width: 95%;
+  /*height: 90vh;*/
+  /*width: 95%;*/
   align-items: center;
   flex-direction: column;
   justify-content: center;
@@ -24,5 +24,5 @@ body{
   }
 
   .app-title {
-    color: #FFF;
+    color: 'black';
   }
