--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,22 @@
-/*APP COMPONENT RELATED CSS GOES HERE*/
+* {
+  box-sizing: border-box;
+}
+body, html, section, main, div, aside, ul {
+  margin: 0;
+  border: 0;
+  padding: 0;
+  font-family: 'Roboto', sans-serif;
+}
+
+body{
+  background-image: url('http://edfuel.org/wp-content/uploads/2015/09/blueprint2.jpg');
+  background-position: center;
+  background-size: auto 1000px  ;
+  background-repeat: repeat;
+
+
+  }
+
+  .app-title {
+    color: #FFF;
+  }
