--- a/src/CssFolder/Controls.css
+++ b/src/CssFolder/Controls.css
@@ -8,21 +8,66 @@ body, html, section, main, div, aside {
   font-family: 'Roboto', sans-serif;
 }
 
-body{
-  background-image: url('http://edfuel.org/wp-content/uploads/2015/09/blueprint2.jpg');
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  display: flex;
+.controls-container {
+  width: 100%;
+  margin-top: 100px;
+}
+
+.app-title {
+  font-size: 72px;
+  text-shadow: 4px 4px #2D2D2A;
+  text-align: center;
+  margin: 0;
+  padding: 20px 0;
+}
+
+.heading-container {
+  width: 75%;
+  height: 200px;
+  text-align: center;
+  background: rgba(204, 219, 220, .7);
+  border-radius: 10px;
+  align-items:  center;
+  margin-top: 60px;
   margin: auto;
-  height: 90vh;
-  width: 95%;
-  align-items: center;
-  flex-direction: column;
   justify-content: center;
+  box-shadow: 3px 3px 3px #2D2D2A;
 
-  }
+}
 
-  .app-title {
-    color: #FFF;
-  }
+
+
+.search-input {
+  height: 50px;
+  width: 300px;
+  border-radius: 5px;
+  border: none;
+  margin: auto;
+  text-align: center;
+  box-shadow: 5px 5px 3px #2D2D2A;
+  font-size: 16px;
+}
+
+.search-input:hover {
+  cursor: text;
+}
+
+.search-input::placeholder {
+  color: #000;
+}
+
+.submit-btn {
+  height: 50px;
+  width: 100px;
+  border: none;
+  border-radius: 5px;
+  margin-left: 15px;
+  background-color: #FFF;
+  box-shadow: 5px 5px 3px #2D2D2A;
+  font-size: 16px;
+  outline: none;
+}
+
+.submit-btn:hover {
+  cursor: pointer;
+}
