--- a/src/CssFolder/DistrictCard.css
+++ b/src/CssFolder/DistrictCard.css
@@ -28,6 +28,15 @@ article.selected {
   opacity: 0.5;
 }
 
+article.ghost-card {
+  opacity: 0.3;
+}
+
+article.ghost-card:hover {
+  cursor: default;
+  color: black;
+}
+
 h2 {
   font-size: 16px;
   border-bottom: 2px solid #000;
