--- a/src/CssFolder/Controls.css
+++ b/src/CssFolder/Controls.css
@@ -10,6 +10,7 @@ body, html, section, main, div, aside {
 
 .controls-container {
   width: 100%;
+  margin-bottom: 30px;
   margin-top: 100px;
 }
 
