--- a/src/CssFolder/Comparison.css
+++ b/src/CssFolder/Comparison.css
@@ -8,8 +8,10 @@
 }
 
 .comparison-container p {
+  margin: 20px 0;
   width: 100%;
-  font-size: 60px;
+  font-size: 50px;
+  text-align: center;
 }
 
 .comparison-wrapper {
