--- a/src/CssFolder/DistrictList.css
+++ b/src/CssFolder/DistrictList.css
@@ -9,9 +9,11 @@ body, html, section, main, div, aside {
 }
 
 .card-container {
-  margin: auto;
-  margin-top: 50px;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  margin: auto;
+  margin-bottom: 35px;
+  margin-top: 50px;
+  z-index: 0;
 }
